--- a/src/main/webapp/resources/client/assets/css/material-kit.css
+++ b/src/main/webapp/resources/client/assets/css/material-kit.css
@@ -10155,9 +10155,13 @@ a .material-icons {
 
 
 
+
+
 %
 ,
 60
+
+
 
 
 
@@ -10169,7 +10173,11 @@ a .material-icons {
 
 
 
+
+
 :
+
+
 
 
 
@@ -10177,7 +10185,11 @@ a .material-icons {
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10193,7 +10205,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10202,7 +10218,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -10210,7 +10230,11 @@ transform
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10226,7 +10250,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10235,7 +10263,11 @@ rotate3d
 
 
 
+
+
 :
+
+
 
 
 
@@ -10245,7 +10277,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10254,7 +10290,11 @@ transform-origin
 
 
 
+
+
 :
+
+
 
 
 
@@ -10264,7 +10304,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10273,12 +10317,18 @@ left
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10287,7 +10337,11 @@ animation-timing-function
 
 
 
+
+
 :
+
+
 
 
 
@@ -10295,9 +10349,13 @@ animation-timing-function
 ease-in-out
 
 
+
+
 ;
 }
 40
+
+
 
 
 
@@ -10309,9 +10367,13 @@ ease-in-out
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -10321,10 +10383,16 @@ ease-in-out
 
 
 
+
+
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10340,7 +10408,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10349,7 +10421,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -10357,7 +10433,11 @@ transform
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10373,7 +10453,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10382,7 +10466,11 @@ rotate3d
 
 
 
+
+
 :
+
+
 
 
 
@@ -10392,7 +10480,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10401,7 +10493,11 @@ transform-origin
 
 
 
+
+
 :
+
+
 
 
 
@@ -10411,7 +10507,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10420,12 +10520,18 @@ left
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10434,12 +10540,18 @@ animation-timing-function
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10448,12 +10560,18 @@ opacity
 
 
 
+
+
 :
 
 
 
 
+
+
 1
+
+
 
 
 ;
@@ -10478,9 +10596,13 @@ keyframes hinge { 0% {
 
 
 
+
+
 %
 ,
 60
+
+
 
 
 
@@ -10492,7 +10614,11 @@ keyframes hinge { 0% {
 
 
 
+
+
 :
+
+
 
 
 
@@ -10500,7 +10626,11 @@ keyframes hinge { 0% {
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10516,7 +10646,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10525,7 +10659,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -10533,7 +10671,11 @@ transform
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10549,7 +10691,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10558,7 +10704,11 @@ rotate3d
 
 
 
+
+
 :
+
+
 
 
 
@@ -10568,7 +10718,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10577,7 +10731,11 @@ transform-origin
 
 
 
+
+
 :
+
+
 
 
 
@@ -10587,7 +10745,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10596,12 +10758,18 @@ left
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10610,7 +10778,11 @@ animation-timing-function
 
 
 
+
+
 :
+
+
 
 
 
@@ -10618,9 +10790,13 @@ animation-timing-function
 ease-in-out
 
 
+
+
 ;
 }
 40
+
+
 
 
 
@@ -10632,9 +10808,13 @@ ease-in-out
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -10644,10 +10824,16 @@ ease-in-out
 
 
 
+
+
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10663,7 +10849,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10672,7 +10862,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -10680,7 +10874,11 @@ transform
 rotate3d
 
 
+
+
 (
+
+
 
 
 
@@ -10696,7 +10894,11 @@ rotate3d
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -10705,7 +10907,11 @@ rotate3d
 
 
 
+
+
 :
+
+
 
 
 
@@ -10715,7 +10921,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10724,7 +10934,11 @@ transform-origin
 
 
 
+
+
 :
+
+
 
 
 
@@ -10734,7 +10948,11 @@ top
 
 
 
+
+
 left
+
+
 
 
 ;
@@ -10743,12 +10961,18 @@ left
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10757,12 +10981,18 @@ animation-timing-function
 
 
 
+
+
 :
 
 
 
 
+
+
 ease-in-out
+
+
 
 
 ;
@@ -10771,12 +11001,18 @@ opacity
 
 
 
+
+
 :
 
 
 
 
+
+
 1
+
+
 
 
 ;
@@ -11288,9 +11524,13 @@ keyframes checkbox-on { 0% {
 
 
 
+
+
 %
 {
 box-shadow
+
+
 
 
 
@@ -11300,9 +11540,6 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
@@ -11310,7 +11547,18 @@ box-shadow
 
 
 
+
+
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11322,12 +11570,18 @@ box-shadow
 
 
 
+
+
 -10px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11339,12 +11593,18 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11356,12 +11616,18 @@ box-shadow
 
 
 
+
+
 32px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11373,7 +11639,11 @@ box-shadow
 
 
 
+
+
 5px
+
+
 
 
 
@@ -11383,9 +11653,13 @@ box-shadow
 
 
 
+
+
 10px
 ,
 20px
+
+
 
 
 
@@ -11395,7 +11669,11 @@ box-shadow
 
 
 
+
+
 0
+
+
 
 
 
@@ -11403,9 +11681,13 @@ box-shadow
 11px
 
 
+
+
 ;
 }
 100
+
+
 
 
 
@@ -11417,14 +11699,13 @@ box-shadow
 
 
 
+
+
 :
 
 
 
 
-0
-
-
 
 
 0
@@ -11432,7 +11713,18 @@ box-shadow
 
 
 
+
+
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11444,12 +11736,18 @@ box-shadow
 
 
 
+
+
 -10px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11461,12 +11759,18 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11478,12 +11782,18 @@ box-shadow
 
 
 
+
+
 32px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11495,12 +11805,18 @@ box-shadow
 
 
 
+
+
 5px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11512,7 +11828,11 @@ box-shadow
 
 
 
+
+
 -12px
+
+
 
 
 
@@ -11522,7 +11842,11 @@ box-shadow
 
 
 
+
+
 11px
+
+
 
 
 ;
@@ -11538,9 +11862,13 @@ keyframes rippleOn { 0% {
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -11550,10 +11878,16 @@ opacity
 
 
 
+
+
 0
 
 
+
+
 .2
+
+
 
 
 ;
@@ -11563,9 +11897,13 @@ opacity
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -11575,7 +11913,11 @@ opacity
 
 
 
+
+
 0
+
+
 
 
 ;
@@ -11591,9 +11933,13 @@ keyframes rippleOff { 0% {
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -11603,10 +11949,16 @@ opacity
 
 
 
+
+
 0
 
 
+
+
 .2
+
+
 
 
 ;
@@ -11616,9 +11968,13 @@ opacity
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -11628,7 +11984,11 @@ opacity
 
 
 
+
+
 0
+
+
 
 
 ;
@@ -11859,9 +12219,13 @@ keyframes checkboxOn { 0% {
 
 
 
+
+
 %
 {
 box-shadow
+
+
 
 
 
@@ -11871,9 +12235,6 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
@@ -11881,7 +12242,18 @@ box-shadow
 
 
 
+
+
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11893,12 +12265,18 @@ box-shadow
 
 
 
+
+
 -10px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11910,12 +12288,18 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -11927,12 +12311,18 @@ box-shadow
 
 
 
+
+
 32px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -11944,7 +12334,11 @@ box-shadow
 
 
 
+
+
 5px
+
+
 
 
 
@@ -11954,9 +12348,13 @@ box-shadow
 
 
 
+
+
 10px
 ,
 20px
+
+
 
 
 
@@ -11966,7 +12364,11 @@ box-shadow
 
 
 
+
+
 0
+
+
 
 
 
@@ -11974,9 +12376,13 @@ box-shadow
 11px
 
 
+
+
 ;
 }
 100
+
+
 
 
 
@@ -11988,14 +12394,13 @@ box-shadow
 
 
 
+
+
 :
 
 
 
 
-0
-
-
 
 
 0
@@ -12003,7 +12408,18 @@ box-shadow
 
 
 
+
+
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -12015,12 +12431,18 @@ box-shadow
 
 
 
+
+
 -10px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -12032,12 +12454,18 @@ box-shadow
 
 
 
-0
-
-
 
 
 0
+
+
+
+
+
+
+0
+
+
 
 
 
@@ -12049,12 +12477,18 @@ box-shadow
 
 
 
+
+
 32px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -12066,12 +12500,18 @@ box-shadow
 
 
 
+
+
 5px
 
 
 
 
+
+
 0
+
+
 
 
 
@@ -12083,7 +12523,11 @@ box-shadow
 
 
 
+
+
 -12px
+
+
 
 
 
@@ -12093,7 +12537,11 @@ box-shadow
 
 
 
+
+
 11px
+
+
 
 
 ;
@@ -12109,9 +12557,13 @@ keyframes rippleOn { 0% {
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -12121,10 +12573,16 @@ opacity
 
 
 
+
+
 0
 
 
+
+
 .2
+
+
 
 
 ;
@@ -12134,9 +12592,13 @@ opacity
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -12146,7 +12608,11 @@ opacity
 
 
 
+
+
 0
+
+
 
 
 ;
@@ -12162,9 +12628,13 @@ keyframes rippleOff { 0% {
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -12174,10 +12644,16 @@ opacity
 
 
 
+
+
 0
 
 
+
+
 .2
+
+
 
 
 ;
@@ -12187,9 +12663,13 @@ opacity
 
 
 
+
+
 %
 {
 opacity
+
+
 
 
 
@@ -12199,7 +12679,11 @@ opacity
 
 
 
+
+
 0
+
+
 
 
 ;
@@ -16429,11 +16913,12 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 	background-position: center center;
 	position: absolute;
 	margin: 0;
-	float : right;
+	float: right;
 	background-repeat: no-repeat;
-	left: 60%;
+	left: 125px;
 	transform: translateX(-50%);
 }
+
 .logo_face {
 	height: 300px;
 	width: 300px;
@@ -16449,10 +16934,10 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 	align-items: center;
 	background-position: center center;
 	position: absolute;
-	float : left;
+	float: left;
 	margin: 0;
 	background-repeat: no-repeat;
-	left: 25%;
+	left: 125px;
 	transform: translateX(-50%);
 }
 
@@ -18245,9 +18730,13 @@ footer .pull-center {
 	
 	
 	
+	
+	
 	%
 	{
 	top
+	
+	
 	
 	
 	
@@ -18257,7 +18746,11 @@ footer .pull-center {
 	
 	
 	
+	
+	
 	6px
+	
+	
 	
 	
 	;
@@ -18266,7 +18759,11 @@ footer .pull-center {
 	
 	
 	
+	
+	
 	:
+	
+	
 	
 	
 	
@@ -18274,7 +18771,11 @@ footer .pull-center {
 	rotate
 	
 	
+	
+	
 	(
+	
+	
 	
 	
 	
@@ -18284,7 +18785,11 @@ footer .pull-center {
 	
 	
 	
+	
+	
 	)
+	
+	
 	
 	
 	;
@@ -18295,9 +18800,13 @@ footer .pull-center {
 
 
 
+
+
 %
 {
 transform
+
+
 
 
 
@@ -18307,10 +18816,16 @@ transform
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18320,12 +18835,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18337,7 +18858,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -18345,7 +18870,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18355,7 +18884,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18372,9 +18905,13 @@ rotate
 
 
 
+
+
 %
 {
 top
+
+
 
 
 
@@ -18384,7 +18921,11 @@ top
 
 
 
+
+
 6px
+
+
 
 
 ;
@@ -18393,7 +18934,11 @@ top
 
 
 
+
+
 :
+
+
 
 
 
@@ -18401,7 +18946,11 @@ top
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18411,7 +18960,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18421,9 +18974,13 @@ rotate
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -18433,10 +18990,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18446,12 +19009,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18463,7 +19032,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -18471,7 +19044,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18481,7 +19058,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18498,9 +19079,13 @@ rotate
 
 
 
+
+
 %
 {
 top
+
+
 
 
 
@@ -18510,7 +19095,11 @@ top
 
 
 
+
+
 6px
+
+
 
 
 ;
@@ -18519,7 +19108,11 @@ top
 
 
 
+
+
 :
+
+
 
 
 
@@ -18527,7 +19120,11 @@ top
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18537,7 +19134,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18547,9 +19148,13 @@ rotate
 
 
 
+
+
 %
 {
 -moz-transform
+
+
 
 
 
@@ -18559,10 +19164,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18572,12 +19183,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18589,7 +19206,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -18597,7 +19218,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18607,7 +19232,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18624,9 +19253,13 @@ keyframes topbar-back { 0% {
 
 
 
+
+
 %
 {
 transform
+
+
 
 
 
@@ -18636,10 +19269,16 @@ transform
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18649,12 +19288,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -18666,7 +19311,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -18674,7 +19323,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18684,12 +19337,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18701,12 +19360,18 @@ top
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -18715,7 +19380,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -18723,7 +19392,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18733,7 +19406,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18750,9 +19427,13 @@ rotate
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -18762,10 +19443,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18775,12 +19462,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -18792,7 +19485,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -18800,7 +19497,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18810,12 +19511,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18827,12 +19534,18 @@ top
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -18841,7 +19554,11 @@ top
 
 
 
+
+
 :
+
+
 
 
 
@@ -18849,7 +19566,11 @@ top
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18859,7 +19580,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -18876,9 +19601,13 @@ rotate
 
 
 
+
+
 %
 {
 -moz-transform
+
+
 
 
 
@@ -18888,10 +19617,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18901,12 +19636,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -18918,7 +19659,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -18926,7 +19671,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18936,12 +19685,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -18953,12 +19708,18 @@ top
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -18967,7 +19728,11 @@ top
 
 
 
+
+
 :
+
+
 
 
 
@@ -18975,7 +19740,11 @@ top
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -18985,7 +19754,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19002,9 +19775,13 @@ keyframes bottombar-x { 0% {
 
 
 
+
+
 %
 {
 bottom
+
+
 
 
 
@@ -19014,7 +19791,11 @@ bottom
 
 
 
+
+
 6px
+
+
 
 
 ;
@@ -19023,7 +19804,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -19031,7 +19816,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19041,7 +19830,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19051,9 +19844,13 @@ rotate
 
 
 
+
+
 %
 {
 transform
+
+
 
 
 
@@ -19063,10 +19860,16 @@ transform
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19076,12 +19879,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19093,7 +19902,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -19101,7 +19914,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19111,7 +19928,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19128,9 +19949,13 @@ rotate
 
 
 
+
+
 %
 {
 bottom
+
+
 
 
 
@@ -19140,7 +19965,11 @@ bottom
 
 
 
+
+
 6px
+
+
 
 
 ;
@@ -19149,7 +19978,11 @@ bottom
 
 
 
+
+
 :
+
+
 
 
 
@@ -19157,7 +19990,11 @@ bottom
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19167,7 +20004,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19177,9 +20018,13 @@ rotate
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -19189,10 +20034,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19202,12 +20053,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19219,7 +20076,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -19227,7 +20088,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19237,7 +20102,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19254,9 +20123,13 @@ rotate
 
 
 
+
+
 %
 {
 bottom
+
+
 
 
 
@@ -19266,7 +20139,11 @@ bottom
 
 
 
+
+
 6px
+
+
 
 
 ;
@@ -19275,7 +20152,11 @@ bottom
 
 
 
+
+
 :
+
+
 
 
 
@@ -19283,7 +20164,11 @@ bottom
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19293,7 +20178,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19303,9 +20192,13 @@ rotate
 
 
 
+
+
 %
 {
 -moz-transform
+
+
 
 
 
@@ -19315,10 +20208,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19328,12 +20227,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19345,7 +20250,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -19353,7 +20262,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19363,7 +20276,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19380,9 +20297,13 @@ keyframes bottombar-back { 0% {
 
 
 
+
+
 %
 {
 transform
+
+
 
 
 
@@ -19392,10 +20313,16 @@ transform
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19405,12 +20332,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -19422,7 +20355,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -19430,7 +20367,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19440,12 +20381,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19457,12 +20404,18 @@ bottom
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -19471,7 +20424,11 @@ transform
 
 
 
+
+
 :
+
+
 
 
 
@@ -19479,7 +20436,11 @@ transform
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19489,7 +20450,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19506,9 +20471,13 @@ rotate
 
 
 
+
+
 %
 {
 -webkit-transform
+
+
 
 
 
@@ -19518,10 +20487,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19531,12 +20506,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -19548,7 +20529,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -19556,7 +20541,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19566,12 +20555,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19583,12 +20578,18 @@ bottom
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -19597,7 +20598,11 @@ bottom
 
 
 
+
+
 :
+
+
 
 
 
@@ -19605,7 +20610,11 @@ bottom
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19615,7 +20624,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
@@ -19632,9 +20645,13 @@ rotate
 
 
 
+
+
 %
 {
 -moz-transform
+
+
 
 
 
@@ -19644,10 +20661,16 @@ rotate
 
 
 
+
+
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19657,12 +20680,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 75
+
+
 
 
 
@@ -19674,7 +20703,11 @@ rotate
 
 
 
+
+
 :
+
+
 
 
 
@@ -19682,7 +20715,11 @@ rotate
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19692,12 +20729,18 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
 }
 100
+
+
 
 
 
@@ -19709,12 +20752,18 @@ bottom
 
 
 
+
+
 :
 
 
 
 
+
+
 0px
+
+
 
 
 ;
@@ -19723,7 +20772,11 @@ bottom
 
 
 
+
+
 :
+
+
 
 
 
@@ -19731,7 +20784,11 @@ bottom
 rotate
 
 
+
+
 (
+
+
 
 
 
@@ -19741,7 +20798,11 @@ rotate
 
 
 
+
+
 )
+
+
 
 
 ;
