--- a/src/main/webapp/resources/client/assets2/css/fresh-bootstrap-table.css
+++ b/src/main/webapp/resources/client/assets2/css/fresh-bootstrap-table.css
@@ -37,6 +37,25 @@
     -ms-transform: rotate(360deg);
   }
 }
+.ranking_title {
+	height: 500px;
+	width: 500px;
+	box-sizing: border-box;
+	object-fit: contain;
+	background-position: center center;
+	background-size: contain;
+	background-image:	url("/resources/client/assets/img/ranking/ranking_noncrop.png");
+	margin: 0;
+	padding: 0;
+	border: 0;
+	align-items: center;
+	background-position: center center;
+	position: absolute;
+	margin: 0;
+	background-repeat: no-repeat;
+	transform: translateX(-50%);
+}
+
 .bootstrap-table .fixed-table-toolbar::after {
   content: "";
   display: block;
@@ -326,11 +345,11 @@ div.fixed-table-scroll-outer {
   }
 }
 /*           Font Smoothing      */
-body {
+/* body {
   font-family: "Roboto", "Helvetica Neue", "Open Sans", Arial, sans-serif;
-}
+} */
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, .btn, a, .td-name, td, .form-control, label {
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .brand, .btn, a, .td-name, td, .form-control, label {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: "Roboto", "Helvetica Neue", "Open Sans", Arial, sans-serif;
@@ -437,16 +456,12 @@ input[type=file] > input[type=button]::-moz-focus-inner {
 }
 
 .ui-slider-handle:focus,
-.navbar-toggle {
-  outline: 0 !important;
-}
+
 
 /*           Animations              */
 .form-control,
 .input-group-addon,
-.tagsinput,
-.navbar,
-.navbar .alert {
+.tagsinput{
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
   -o-transition: all 300ms linear;
