--- a/src/main/webapp/resources/client/assets/css/material-kit.css
+++ b/src/main/webapp/resources/client/assets/css/material-kit.css
@@ -67,7 +67,19 @@
 	z-index: 2;
 }
 
-.regist_button{
+.button_area{
+	position: absolute;
+	left: 800px;
+	width: 300px;
+	height: 100px;
+}
+.list_button{
+	position: absolute;
+	left: 50%;
+	width: 150px;
+	height: 50px;
+}
+.regist_button {
 	position: absolute;
 	left: 50%;
 	width: 150px;
