--- a/src/main/webapp/resources/client/assets/css/material-kit.css
+++ b/src/main/webapp/resources/client/assets/css/material-kit.css
@@ -71,7 +71,7 @@
 .button_area{
 	position: relative;
 	float: right;
-	width: 200px;
+	width: auto;;
 	height: 100px;
 	font-family: 'Gowun Dodum', sans-serif;
 }
@@ -101,9 +101,68 @@
 	background-position: center center;
 	background-image: url("/resources/client/assets/img/nemo_logo/error.png");
 }
-
+.detail_section{
+	width: 100%;
+	height: auto;
+	position: relative;
+	display: inline-block;
+	
+}
+.detail_category{
+	width: 40px;
+	height: 40px;
+	padding: 0px;
+	margin: 0px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	box-sizing: border-box;
+	object-fit: contain;
+	background-position: center center;
+}
 .card {
   font-size: .875rem;
+}
+.pretty_button{
+	background-color: #ff9f1e; /* Blue */
+	border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 10px;
+  cursor: pointer;
+  	font-family: 'Gowun Dodum', sans-serif;
+}
+.title_section{
+	/* 버튼을 가장한 버튼 아님 걍 모양 만드느라 버튼으로 쓴거임 클릭해도 아무 효과 없음 */
+	box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	background:linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+	background-color:#ff9f1e;
+	border-radius:6px;
+	border:1px solid #eeb44f;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 10px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #cc9f52;
+	position:relative;
+	top:1px;
+}
+.recipe_order{
+	font-size: 16px;
+    font-family: 'Gowun Dodum', sans-serif;
+	width: 800px;
+	height: auto;
+	border: none;
+	overflow:visible;
+}
+.detail_img{
+	width: 300px;
+	height: 300px
 }
 
 *,
